# emergent-divergence

./: .gitignore  README.md  TRIAGE_AND_ARCHITECTURE.md  index.html  mindlink_analysis_export.json  mindlink_chaos_report_data.json  mindlink_full_report.json  pyproject.toml
configs/: baseline.yaml  memory_enabled.yaml  no_memory.yaml  zero_role_bias.yaml
data/raw_logs/run_20260310_161255_db9f7b49/: analysis_report.json  events.jsonl  semantic_cosine_distances.csv
data/raw_logs/run_20260405_052657_2879ed7a/: analysis_report.json  events.jsonl  semantic_cosine_distances.csv
data/reports/: pilot_analysis_report.md
docs/: SESSION_CONTEXT.md
docs/superpowers/specs/: 2026-03-10-pre-control-gap-closure-design.md
docs/vault/: 00 — Index.md  01 — Research Question & Hypothesis.md  02 — Experimental Design.md  03 — Architecture Overview.md  04 — Lineage & Provenance.md
docs/vault/Agents/: Agent 0 — Proposer.md  Agent 1 — Critic.md  Agent 2 — Synthesizer.md
docs/vault/Configs/: Config — memory_enabled.yaml.md  Config — no_memory.yaml.md
docs/vault/Meta/: Experiment Roadmap.md  Future Work.md  Glossary.md  Risks & Confounds.md
docs/vault/Metrics/: Metric A — Linguistic Divergence (JSD).md  Metric B — Behavioral Specialization.md  Metric C — Memory Usage Patterns.md  Metric D — Coordination Structure.md  Metrics Summary & Interpretation.md
scripts/: generate_figures.py
src/emergent_divergence/: __init__.py  __main__.py
tests/: conftest.py  test_integration.py  test_logging.py  test_memory.py  test_metrics.py  test_tasks.py
(+18 files in other folders)
